--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- NAVBAR SECTION -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top bg-faded">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top bg-faded" style="background-color: rgba(52,58,64, 0.3)!important">
     <a class="navbar-brand" href="#">JnC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
