--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="animate.css">
   <!-- Your own stylesheet -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -42,7 +42,7 @@
   </nav>
 
   <div id="startup" class="container1">
-    <h1>The biggest startup event of the year</h1>
+    <h1 class="animated zoomIn">The biggest startup event of the year</h1>
 
     <!-- Begin Mailchimp Signup Form -->
     <div id="mc_embed_signup">
